# S-A-D

./: .gitignore  README.md  SOLUCAO_ERRO_DATABASE.md  UP.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  auth.py  crops.py  dashboard.py  etl.py  fields.py  health.py  inputs.py  prices.py  reports.py  scenarios.py  soil.py  weather.py
backend/app/core/: config.py  logging.py  rate_limit.py  security.py  telemetry.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  crop.py  field.py  input_cost.py  report.py  scenario.py  soil.py  user.py  weather.py
backend/app/schemas/: __init__.py  auth.py  common.py  crop.py  etl.py  field.py  input.py  report.py  scenario.py  soil.py  user.py  weather.py
backend/app/scripts/: ingest.py  seed.py
backend/app/services/: analytics.py  crops.py  etl.py  fields.py  inputs.py  reports.py  scenarios.py  soil.py  weather.py
backend/app/tasks/: simulations.py
backend/app/tests/: test_crops.py  test_weather.py
data/samples/: costs.xlsx  fields.geojson  productivity.csv  rainfall.csv
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  OPERATIONS.md  SCRIPTS_EXAMPLES.md  TEST_PLAN.md  WIREFRAMES.md  openapi.yaml
frontend/: Dockerfile  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/cypress/e2e/: dashboard.cy.ts
frontend/public/: manifest.json
frontend/src/__tests__/: accessibility.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/types/: react-grid-layout.d.ts
ops/: otel-collector-config.yaml
(+24 files in other folders)
