[tool.poetry]
name = "siad-backend"
version = "0.1.0"
description = "Backend FastAPI para o Sistema de Informação de Apoio à Decisão (SIAD) do agronegócio"
authors = ["SIAD Team <dev@siad.ag>" ]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.35"
sqlalchemy-utils = "^0.41.2"
asyncpg = "^0.31.0"
psycopg = {extras = ["binary"], version = "^3.2.1"}
alembic = "^1.13.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.6.1"
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.9.0"
redis = "^5.1.0"
boto3 = "^1.35.42"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
statsmodels = "^0.14.3"
httpx = "^0.27.0"
requests = "^2.32.3"
python-dateutil = "^2.9.0"
celery = "^5.4.0"
flower = "^2.0.1"
loguru = "^0.7.2"
rasterio = "^1.4.3"
shapely = "^2.0.4"
geoalchemy2 = "^0.15.2"
fastapi-pagination = "^0.12.29"
weasyprint = "^62.3"
reportlab = "^4.2.5"
openpyxl = "^3.1.5"
pyarrow = "^22.0.0"
prometheus-fastapi-instrumentator = "^7.0.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.8"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.11.2"
xmltodict = "^0.14.2"
qrcode = "^7.4.2"
opentelemetry-sdk = "^1.27.0"
opentelemetry-exporter-otlp = "^1.27.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-instrumentation-sqlalchemy = "^0.48b0"

[tool.poetry.group.dev.dependencies]
faker = "^28.4.1"
typer = "^0.12.5"

[tool.poetry.scripts]
seed = "app.scripts.seed:app"
etl = "app.scripts.ingest:app"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
